--- a/IPALoader/IPALoader.csproj
+++ b/IPALoader/IPALoader.csproj
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\ILRepack.2.0.15\build\ILRepack.props" Condition="Exists('..\packages\ILRepack.2.0.15\build\ILRepack.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -74,32 +73,17 @@ IF EXIST "$(TargetPath).mdb" ren "$(TargetPath).mdb" "$(TargetName).mdb"</PostBu
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\ILRepack.2.0.15\build\ILRepack.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ILRepack.2.0.15\build\ILRepack.props'))" />
     <Error Condition="!Exists('..\packages\ILRepack.MSBuild.Task.1.0.9\build\ILRepack.MSBuild.Task.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ILRepack.MSBuild.Task.1.0.9\build\ILRepack.MSBuild.Task.targets'))" />
   </Target>
   <!-- ILRepack -->
   <Target Name="AfterBuild">
     <Move SourceFiles="$(OutputPath)\$(AssemblyName).dll" DestinationFiles="$(OutputPath)\$(AssemblyName)1.dll" />
-	
     <ItemGroup>
       <InputAssemblies Include="$(OutputPath)\$(AssemblyName)1.dll" />
       <InputAssemblies Include="$(OutputPath)\IllusionPlugin.dll" />
     </ItemGroup>
-    
-
-    <ILRepack 
-      Parallel="true"
-      Internalize="true"
-      DebugInfo="true"
-      PrimaryAssemblyFile="$(OutputPath)\$(AssemblyName)1.dll"
-      InputAssemblies="@(InputAssemblies)"
-      TargetKind="Dll"
-      TargetPlatformVersion="v2"
-      OutputFile="$(OutputPath)\$(AssemblyName).dll"
-    />
-    
+    <ILRepack Parallel="true" Internalize="true" DebugInfo="true" PrimaryAssemblyFile="$(OutputPath)\$(AssemblyName)1.dll" InputAssemblies="@(InputAssemblies)" TargetKind="Dll" TargetPlatformVersion="v2" OutputFile="$(OutputPath)\$(AssemblyName).dll" />
     <Delete Files="@(InputAssemblies)" />
-
   </Target>
   <!-- /ILRepack -->
   <Import Project="..\packages\ILRepack.MSBuild.Task.1.0.9\build\ILRepack.MSBuild.Task.targets" Condition="Exists('..\packages\ILRepack.MSBuild.Task.1.0.9\build\ILRepack.MSBuild.Task.targets')" />
