--- a/Sideloader/Sideloader.csproj
+++ b/Sideloader/Sideloader.csproj
@@ -75,12 +75,14 @@
     <Compile Include="AutoResolver\ResolveInfo.cs" />
     <Compile Include="AutoResolver\StructReference.cs" />
     <Compile Include="AutoResolver\UniversalAutoResolver.cs" />
+    <Compile Include="BundleManager.cs" />
     <Compile Include="Manifest.cs" />
     <Compile Include="Sideloader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ILMerge.props" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ExtensibleSaveFormat\ExtensibleSaveFormat.csproj">
@@ -102,4 +104,36 @@ IF EXIST "$(TargetDir)$(TargetName).pdb" del "$(TargetName).pdb"
 IF EXIST "$(TargetDir)$(TargetName).mdb" del "$(TargetName).mdb"
 IF EXIST "$(TargetPath).mdb" ren "$(TargetPath).mdb" "$(TargetName).mdb"</PostBuildEvent>
   </PropertyGroup>
+  <Import Project="..\packages\ILRepack.MSBuild.Task.1.0.9\build\ILRepack.MSBuild.Task.targets" Condition="Exists('..\packages\ILRepack.MSBuild.Task.1.0.9\build\ILRepack.MSBuild.Task.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\ILRepack.MSBuild.Task.1.0.9\build\ILRepack.MSBuild.Task.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ILRepack.MSBuild.Task.1.0.9\build\ILRepack.MSBuild.Task.targets'))" />
+  </Target>
+  <!-- ILRepack -->
+  <Target Name="AfterBuild">
+    <Move SourceFiles="$(OutputPath)\$(AssemblyName).dll" DestinationFiles="$(OutputPath)\$(AssemblyName)1.dll" />
+
+    <ItemGroup>
+      <InputAssemblies Include="$(OutputPath)\$(AssemblyName)1.dll" />
+      <InputAssemblies Include="$(OutputPath)\I18N.dll" />
+      <InputAssemblies Include="$(OutputPath)\I18N.West.dll" />
+      <InputAssemblies Include="$(OutputPath)\ICSharpCode.SharpZipLib.dll" />
+    </ItemGroup>
+
+    <ILRepack 
+      Parallel="true" 
+      Internalize="true" 
+      DebugInfo="true" 
+      LibraryPath="..\lib"
+      PrimaryAssemblyFile="$(OutputPath)\$(AssemblyName)1.dll" 
+      InputAssemblies="@(InputAssemblies)" 
+      TargetKind="Dll" 
+      TargetPlatformVersion="v2" 
+      OutputFile="$(OutputPath)\$(AssemblyName).dll" />
+
+    <Delete Files="@(InputAssemblies)" />
+  </Target>
+  <!-- /ILRepack -->
 </Project>
