--- a/ConfigurationManager/ConfigurationManager.csproj
+++ b/ConfigurationManager/ConfigurationManager.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Assembly-CSharp">
+      <HintPath>..\bin\BepInEx\Assembly-CSharp.dll</HintPath>
+    </Reference>
     <Reference Include="BepInEx">
       <HintPath>..\bin\BepInEx\BepInEx.dll</HintPath>
     </Reference>
@@ -40,13 +43,17 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>..\..\FPSCounter\Libs\UnityEngine.dll</HintPath>
+      <HintPath>..\bin\BepInEx\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AcceptableValueBaseAttribute.cs" />
+    <Compile Include="AcceptableValueListAttribute.cs" />
+    <Compile Include="AcceptableValueRangeAttribute.cs" />
     <Compile Include="ConfigurationManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingEntry.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
