--- a/ConfigurationManager/ConfigurationManager.csproj
+++ b/ConfigurationManager/ConfigurationManager.csproj
@@ -57,9 +57,11 @@
     <Compile Include="AcceptableValueBaseAttribute.cs" />
     <Compile Include="AcceptableValueListAttribute.cs" />
     <Compile Include="AcceptableValueRangeAttribute.cs" />
+    <Compile Include="ComboBox.cs" />
     <Compile Include="ConfigurationManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingEntry.cs" />
+    <Compile Include="SettingFieldDrawer.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
