--- a/ConfigurationManager/ConfigurationManager.csproj
+++ b/ConfigurationManager/ConfigurationManager.csproj
@@ -55,18 +55,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AcceptableValueBaseAttribute.cs" />
-    <Compile Include="AcceptableValueListAttribute.cs" />
-    <Compile Include="AcceptableValueRangeAttribute.cs" />
-    <Compile Include="ComboBox.cs" />
+    <Compile Include="Interface\AcceptableValueBaseAttribute.cs" />
+    <Compile Include="Interface\AcceptableValueListAttribute.cs" />
+    <Compile Include="Interface\AcceptableValueRangeAttribute.cs" />
+    <Compile Include="Utilities\ComboBox.cs" />
     <Compile Include="ConfigurationManager.cs" />
-    <Compile Include="KeyboardShortcut.cs" />
+    <Compile Include="Interface\KeyboardShortcut.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SavedKeyboardShortcut.cs" />
+    <Compile Include="Interface\SavedKeyboardShortcut.cs" />
     <Compile Include="SettingEntry.cs" />
     <Compile Include="SettingEntryBase.cs" />
     <Compile Include="SettingFieldDrawer.cs" />
-    <Compile Include="Utilities.cs" />
+    <Compile Include="Utilities\Utilities.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
