--- a/DeveloperConsole/DeveloperConsole.csproj
+++ b/DeveloperConsole/DeveloperConsole.csproj
@@ -44,6 +44,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BepInExSettings.cs" />
     <Compile Include="DeveloperConsole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SceneDumper.cs" />
